# graphene-oxide-generator

./: README.md  pyproject.toml
src/generator/: __init__.py  __main__.py
src/generator/Gopackages/: graphene.py  hexahapto.py  parallelogram.py
